--- a/backup/1546509871.config.yaml
+++ b/backup/1546509871.config.yaml
@@ -5,14 +5,6 @@ databases:
   password: "000000"
   host: 47.94.206.255
   port: "5432"
-  tables:
-  - table: books
-    fields:
-    - field: id
-    - field: name
-    - field: ISBN
-    - field: pages
-    - field: price
 - database: test
   type: mysql
   username: root
@@ -34,18 +26,13 @@ databases:
     - field: phone
   - table: students
     fields:
+    - field: address
     - field: id
     - field: name
     - field: gender
     - field: phone
     - field: qq
     - field: email
-  - table: courses
-    fields:
-    - field: name
-    - field: teacher
-      foreign_key: teachers
-    - field: id
 - database: test
   type: mysql
   username: root
