--- a/backup/1546520765.config.yaml
+++ b/backup/1546520765.config.yaml
@@ -6,13 +6,11 @@ databases:
   host: 47.94.206.255
   port: "5432"
   tables:
-  - table: books
+  - table: kkkkk
     fields:
     - field: id
     - field: name
-    - field: ISBN
-    - field: pages
-    - field: price
+    - field: time
 - database: test
   type: mysql
   username: root
@@ -34,6 +32,7 @@ databases:
     - field: phone
   - table: students
     fields:
+    - field: address
     - field: id
     - field: name
     - field: gender
@@ -46,6 +45,12 @@ databases:
     - field: teacher
       foreign_key: teachers
     - field: id
+  - table: test
+    fields:
+    - field: id
+    - field: name
+      foreign_key: students
+    - field: course
 - database: test
   type: mysql
   username: root
