--- a/backup/1546526317.config.yaml
+++ b/backup/1546526317.config.yaml
@@ -6,13 +6,12 @@ databases:
   host: 47.94.206.255
   port: "5432"
   tables:
-  - table: books
+  - table: keshe
     fields:
     - field: id
     - field: name
-    - field: ISBN
-    - field: pages
-    - field: price
+    - field: phone
+    - field: iidd
 - database: test
   type: mysql
   username: root
@@ -34,6 +33,7 @@ databases:
     - field: phone
   - table: students
     fields:
+    - field: address
     - field: id
     - field: name
     - field: gender
