--- a/backup/1546526322.config.yaml
+++ b/backup/1546526322.config.yaml
@@ -5,14 +5,6 @@ databases:
   password: "000000"
   host: 47.94.206.255
   port: "5432"
-  tables:
-  - table: books
-    fields:
-    - field: id
-    - field: name
-    - field: ISBN
-    - field: pages
-    - field: price
 - database: test
   type: mysql
   username: root
@@ -34,6 +26,7 @@ databases:
     - field: phone
   - table: students
     fields:
+    - field: address
     - field: id
     - field: name
     - field: gender
