--- a/backup/1546527767.config.yaml
+++ b/backup/1546527767.config.yaml
@@ -6,13 +6,9 @@ databases:
   host: 47.94.206.255
   port: "5432"
   tables:
-  - table: books
+  - table: testtable
     fields:
     - field: id
-    - field: name
-    - field: ISBN
-    - field: pages
-    - field: price
 - database: test
   type: mysql
   username: root
