--- a/backup/1546528065.config.yaml
+++ b/backup/1546528065.config.yaml
@@ -13,6 +13,10 @@ databases:
     - field: ISBN
     - field: pages
     - field: price
+  - table: testtable
+    fields:
+    - field: student
+    - field: id
 - database: test
   type: mysql
   username: root
